Fix arrows being cut off by 1px

--- a/scss/utilities/_icons.scss
+++ b/scss/utilities/_icons.scss
@@ -38,7 +38,7 @@ $svg: '../img/icon-sprite.svg?#{$builddatetime}';
         &-arrow-up {
 
             &--dark {
-                background-position: -16px -14px;
+                background-position: -15px -14px;
                 height: ($baseline * 4);
             }
 
@@ -49,7 +49,7 @@ $svg: '../img/icon-sprite.svg?#{$builddatetime}';
             }
 
             &--light {
-                background-position: -80px -14px;
+                background-position: -79px -14px;
                 height: ($baseline * 4);
             }
 
@@ -64,7 +64,7 @@ $svg: '../img/icon-sprite.svg?#{$builddatetime}';
         &-arrow-down {
 
             &--dark {
-                background-position: -16px -44px;
+                background-position: -15px -44px;
             }
 
             &--dark-small {
@@ -74,7 +74,7 @@ $svg: '../img/icon-sprite.svg?#{$builddatetime}';
             }
 
             &--light {
-                background-position: -80px -44px;
+                background-position: -79px -44px;
             }
 
             &--light-small {
